--- a/.github/workflows/HowLongIveBeenHere-UT.yml
+++ b/.github/workflows/HowLongIveBeenHere-UT.yml
@@ -11,15 +11,19 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Restore all the packages
-        run: npm ci
-
-      - name: Cache
+      - name: Cache node modules
+        id: cache-npm
         uses: actions/cache@v3.0.7
+        env:
+          cache-name: cached-ios-npm-deps
         with:
           path: ./node_modules
           key: ${{ hashFiles('./package.json') }}
 
+      - name: Install required dependencies on cache miss (npm)
+        if: steps.cache-npm.outputs.cache-hit != 'true'
+        run: |
+          npm install
 
   verify:
     name: Verify the sources
