--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "how-long-ive-been-here",
-  "version": "1.0.1",
+  "version": "0.0.1",
   "description": "Mozilla Firefox extension plugin to monitor the time spent on a website",
   "main": "manifest.json",
   "scripts": {
@@ -36,15 +36,15 @@
     "@babel/preset-react": "^7.14.5",
     "@babel/register": "^7.14.5",
     "babel-preset-react-app": "^10.0.0",
-    "eslint": "^7.28.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-jsx-a11y": "^6.6.0",
-    "eslint-plugin-prettier": "^3.4.0",
-    "eslint-plugin-react": "^7.26.1",
+    "eslint": "^8.22.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-jsx-a11y": "^6.6.1",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.30.1",
     "jest": "^27.0.5",
     "prettier": "^2.3.2",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "web-ext": "^6.5.0",
     "webpack": "^5.42.0",
     "webpack-cli": "^4.9.2"
@@ -52,5 +52,13 @@
   "jest": {
     "verbose": true,
     "testEnvironment": "jsdom"
+  },
+  "prettier": {
+    "trailingComma": "es5",
+    "printWidth": 120,
+    "tabWidth": 4,
+    "bracketSpacing": false,
+    "jsxBracketSameLine": true,
+    "endOfLine": "auto"
   }
 }
