--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "test": "jest",
     "package-verify": "eslint . && npm run deploy && web-ext --source-dir ./build lint",
     "ci": "npm run test && npm run package-verify",
-    "build": "babel --config-file ./.babelrc ./app -Dd ./build && webpack --mode development",
-    "deploy": "babel --config-file ./.babelrc ./app -Dd ./build && webpack --mode production"
+    "build": "babel --config-file ./.babelrc ./build/ts -Dd ./build && webpack --mode development",
+    "deploy": "babel --config-file ./.babelrc ./build/ts -Dd ./build && webpack --mode production"
   },
   "repository": {
     "type": "git",
@@ -35,6 +35,8 @@
     "@babel/preset-env": "^7.14.7",
     "@babel/preset-react": "^7.14.5",
     "@babel/register": "^7.14.5",
+    "@types/react": "^18.0.17",
+    "@types/react-dom": "^18.0.6",
     "babel-preset-react-app": "^10.0.0",
     "eslint": "^8.22.0",
     "eslint-config-prettier": "^8.5.0",
@@ -45,6 +47,7 @@
     "prettier": "^2.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "typescript": "^4.7.4",
     "web-ext": "^6.5.0",
     "webpack": "^5.42.0",
     "webpack-cli": "^4.9.2"
