Build project for src dir

--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "test": "jest",
     "package-verify": "eslint . && npm run deploy && web-ext --source-dir ./build lint",
     "ci": "npm run test && npm run package-verify",
-    "build": "babel --config-file ./.babelrc ./build/ts -Dd ./build && webpack --mode development",
-    "deploy": "babel --config-file ./.babelrc ./build/ts -Dd ./build && webpack --mode production"
+    "build": "babel --config-file ./.babelrc ./build/ts -Dd ./build/src && webpack --mode development",
+    "deploy": "babel --config-file ./.babelrc ./build/ts -Dd ./build/src && webpack --mode production"
   },
   "repository": {
     "type": "git",
