--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "test": "jest",
     "package-verify": "eslint . && npm run deploy && web-ext --source-dir ./build lint",
     "ci": "npm run test && npm run package-verify",
-    "build": "babel --config-file ./.babelrc ./build/ts -Dd ./build/src && webpack --mode development",
-    "deploy": "babel --config-file ./.babelrc ./build/ts -Dd ./build/src && webpack --mode production"
+    "build": "babel --config-file ./.babelrc ./app --extensions \".ts,.tsx\" -Dd ./build && webpack --mode development",
+    "deploy": "babel --config-file ./.babelrc ./app --extensions \".ts,.tsx\" -Dd ./build && webpack --mode production"
   },
   "repository": {
     "type": "git",
@@ -34,6 +34,7 @@
     "@babel/node": "^7.14.7",
     "@babel/preset-env": "^7.14.7",
     "@babel/preset-react": "^7.14.5",
+    "@babel/preset-typescript": "^7.18.6",
     "@babel/register": "^7.14.5",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
