--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@babel/preset-react": "^7.14.5",
     "@babel/preset-typescript": "^7.18.6",
     "@babel/register": "^7.14.5",
+    "@types/jest": "^28.1.7",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "babel-preset-react-app": "^10.0.0",
