--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,11 +4,12 @@
         "es2021": true
     },
     "extends": [
+        "plugin:@typescript-eslint/recommended",
         "eslint:recommended",
         "plugin:react/recommended",
         "plugin:jsx-a11y/recommended"
     ],
-    "parser": "@babel/eslint-parser",
+    "parser": "@typescript-eslint/parser",
     "parserOptions": {
         "ecmaVersion": 12,
         "sourceType": "module"
@@ -20,9 +21,11 @@
                 "endOfLine": "auto"
             }
         ],
-        "react/prop-types": 0
+        "react/prop-types": 0,
+        "@typescript-eslint/ban-ts-comment": "off"
     },
     "plugins": [
+        "@typescript-eslint",
         "prettier",
         "jsx-a11y"
     ],
