--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "@types/jest": "^28.1.7",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
+    "@typescript-eslint/eslint-plugin": "^5.33.1",
+    "@typescript-eslint/parser": "^5.33.1",
     "babel-preset-react-app": "^10.0.0",
     "eslint": "^8.22.0",
     "eslint-config-prettier": "^8.5.0",
