Do not use escape signs when specifying TS extensions

--- a/.github/workflows/HowLongIveBeenHere-CI.yml
+++ b/.github/workflows/HowLongIveBeenHere-CI.yml
@@ -87,7 +87,7 @@ jobs:
           key: ${{ hashFiles('./package.json') }}
 
       - name: Transpile
-        run: npx babel --config-file './.babelrc' ./app --extensions \".ts,.tsx\" -Dd ./build
+        run: npx babel --config-file './.babelrc' ./app --extensions ".ts,.tsx" -Dd ./build
 
       - name: Compile
         run: npx webpack --mode 'production'
