Configure and use TypeScript (#2)
* Install and configure TS

* Convert JS files into TS files

* Adjust compilation paths in webpack config

* Build project for src dir

* Install and apply TS preset for Babel

* Adjust tests settings with Jest to TS used

* Install and configure TS ESLint parser and plugin

* Adjust initial code to TS linter

* Run typechecking in the CI workflow

* Fix the Babel call during compilation step in CI

* Do not use escape signs when specifying TS extensions

--- a/.github/workflows/HowLongIveBeenHere-CI.yml
+++ b/.github/workflows/HowLongIveBeenHere-CI.yml
@@ -43,6 +43,8 @@ jobs:
       - name: Run ESLint on the sources
         run: npx eslint .
 
+      - name: Run typechecking
+        run: npx tsc --noEmit
 
   pre-build-package-verify:
     name: Verify the package before build
@@ -85,7 +87,7 @@ jobs:
           key: ${{ hashFiles('./package.json') }}
 
       - name: Transpile
-        run: npx babel --config-file './.babelrc' ./app -Dd ./build
+        run: npx babel --config-file './.babelrc' ./app --extensions ".ts,.tsx" -Dd ./build
 
       - name: Compile
         run: npx webpack --mode 'production'
