--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,8 +6,7 @@
     "extends": [
         "plugin:@typescript-eslint/recommended",
         "eslint:recommended",
-        "plugin:react/recommended",
-        "plugin:jsx-a11y/recommended"
+        "plugin:react/recommended"
     ],
     "parser": "@typescript-eslint/parser",
     "parserOptions": {
@@ -22,7 +21,8 @@
             }
         ],
         "react/prop-types": 0,
-        "@typescript-eslint/ban-ts-comment": "off"
+        "@typescript-eslint/ban-ts-comment": "off",
+        "@typescript-eslint/no-unused-vars": "warn"
     },
     "plugins": [
         "@typescript-eslint",
@@ -33,7 +33,8 @@
         "browser": "writable",
         "window": "readonly",
         "test": "writable",
-        "expect": "writable"
+        "expect": "writable",
+        "JSX": "readonly"
     },
     "settings": {
         "jsx-a11y": {
