--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "@types/jest": "^28.1.7",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
+    "@types/react-test-renderer": "^18.0.0",
+    "@types/webextension-polyfill": "^0.9.0",
     "@typescript-eslint/eslint-plugin": "^5.33.1",
     "@typescript-eslint/parser": "^5.33.1",
     "babel-preset-react-app": "^10.0.0",
@@ -48,11 +50,14 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.30.1",
     "jest": "^27.0.5",
+    "mockzilla": "^0.14.0",
     "prettier": "^2.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-test-renderer": "^18.2.0",
     "typescript": "^4.7.4",
     "web-ext": "^6.5.0",
+    "webextension-polyfill": "^0.10.0",
     "webpack": "^5.42.0",
     "webpack-cli": "^4.9.2"
   },
