Rename extension so that it contains question mark

--- a/app/manifest.json
+++ b/app/manifest.json
@@ -1,6 +1,6 @@
 {
   "manifest_version": 2,
-  "name": "How long I've been here",
+  "name": "How long I've been here?",
   "version": "1.0.0",
 
   "permissions": [
