--- a/app/manifest.json
+++ b/app/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 2,
-  "name": "How long I've been here",
-  "version": "0.0.1",
+  "name": "How long I've been here?",
+  "version": "1.0.0",
 
   "permissions": [
     "activeTab",
